frontend/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-frontend-ingress
  namespace: todo-app  # 네임스페이스 지정
  annotations:
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80},{"HTTPS": 443}]'  # HTTP와 HTTPS 리스닝
    alb.ingress.kubernetes.io/ssl-certificate-no: "35351"  # HTTPS 인증서 번호
    alb.ingress.kubernetes.io/actions.ssl-redirect: |
      {"type":"redirect","redirectConfig":{"protocol":"HTTPS","port":"443","statusCode":"HTTP_301"}}
  labels:
    app: todo-frontend
spec:
  ingressClassName: alb
  rules:
    - host: fe.wookja.site  # 프론트엔드 도메인
      http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: todo-frontend  # 프론트엔드 서비스 이름
                port:
                  number: 80  # 프론트엔드 서비스의 포트
