frontend/frontend-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-frontend
  namespace: todo-app
  labels:
    app: todo-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo-frontend
  template:
    metadata:
      labels:
        app: todo-frontend
    spec:
      containers:
      - name: todo-frontend
        image: tkwk5445/todo-frontend:build-33
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: todo-frontend
  namespace: todo-app
  labels:
    app: todo-frontend
spec:
  type: NodePort
  selector:
    app: todo-frontend
  ports:
  - port: 80
    targetPort: 80
    nodePort: 32373 # NodePort 명시

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-frontend-ingress
  namespace: todo-app
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing # ALB를 인터넷 공개 방식으로 설정
    alb.ingress.kubernetes.io/target-type: ip # 타겟 그룹 타입을 IP 모드로 설정
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80},{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:ap-northeast-2:575108924607:certificate/292949d6-2f8e-448e-86e6-e9a10ff59850" # SSL 인증서 ARN
    alb.ingress.kubernetes.io/actions.ssl-redirect: >
      {"Type": "redirect", "RedirectConfig": {"Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}
    kubernetes.io/ingress.class: alb # Ingress Controller로 ALB 사용
  labels:
    app: todo-frontend
spec:
  rules:
    - host: fe.wookja.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-frontend
                port:
                  number: 80
